Replaced value attributes with placeholder attributes.

--- a/css-brochure-form/index.html
+++ b/css-brochure-form/index.html
@@ -14,15 +14,15 @@
   <form>
     <label for="email">COMPANY EMAIL</label>
     <div>
-      <input type="text" name="email" id="email" value="sally@company.co">
+      <input type="text" name="email" id="email" placeholder="sally@company.co">
     </div>
     <label for="name">NAME</label>
     <div>
-      <input type="text" name="name" id="name" value="Sally Smith">
+      <input type="text" name="name" id="name" placeholder="Sally Smith">
     </div>
     <label for="where">WHERE ARE YOU HIRING?</label>
     <div>
-      <input type="text" name="where" id="where" value="City, Country">
+      <input type="text" name="where" id="where" placeholder="City, Country">
     </div>
     <label for="how-many">HOW MANY ENGINEERS ARE YOU HIRING IN THE NEXT 6 MONTHS?</label>
     <div>
