--- a/css-four-column-layout/index.html
+++ b/css-four-column-layout/index.html
@@ -9,47 +9,51 @@
     <title>CSS Four Column Layout</title>
   </head>
   <body>
-    <h2>How It Works</h2>
-    <div class="feature-container">
-      <div class="feature">
-        <div class="image">
-          <img src="images/screen-1.png" alt="App Switching">
-        </div>
-        <div class="icon">
-          <img src="images/switch-icon.png" alt="Switch Icon">
-        </div>
-        <h3>App Switching</h3>
-        <p>Toggles all your apps on and off.</p>
+    <div class="container">
+      <div class="row-">
+        <h2>How It Works</h2>
       </div>
-      <div class="feature">
-        <div class="image">
-          <img src="images/screen-2.png" alt="Trip Filtering">
+      <div class="row">
+        <div class="col-1-4">
+          <div class="image">
+            <img src="images/screen-1.png" alt="App Switching">
+          </div>
+          <div class="icon">
+            <img src="images/switch-icon.png" alt="Switch Icon">
+          </div>
+          <h3>App Switching</h3>
+          <p>Toggles all your apps on and off.</p>
         </div>
-        <div class="icon">
-          <img src="images/filter-icon.png" alt="Filter Icon">
+        <div class="col-1-4">
+          <div class="image">
+            <img src="images/screen-2.png" alt="Trip Filtering">
+          </div>
+          <div class="icon">
+            <img src="images/filter-icon.png" alt="Filter Icon">
+          </div>
+          <h3>Trip Filtering</h3>
+          <p>Evaluates your trip requests.</p>
         </div>
-        <h3>Trip Filtering</h3>
-        <p>Evaluates your trip requests.</p>
-      </div>
-      <div class="feature">
-        <div class="image">
-          <img src="images/screen-3.png" alt="Service Filters">
+        <div class="col-1-4">
+          <div class="image">
+            <img src="images/screen-3.png" alt="Service Filters">
+          </div>
+          <div class="icon">
+            <img src="images/slider-icon.png" alt="Slider Icon">
+          </div>
+          <h3>Service Filters</h3>
+          <p>Accepts only your ideal trips.</p>
         </div>
-        <div class="icon">
-          <img src="images/slider-icon.png" alt="Slider Icon">
+        <div class="col-1-4">
+          <div class="image">
+            <img src="images/screen-4.png" alt="Stats and Mileage">
+          </div>
+          <div class="icon">
+            <img src="images/bars-icon.png" alt="Bars Icon">
+          </div>
+          <h3>Stats &#43; Mileage</h3>
+          <p>Tracks your trips across all apps.</p>
         </div>
-        <h3>Service Filters</h3>
-        <p>Accepts only your ideal trips.</p>
-      </div>
-      <div class="feature">
-        <div class="image">
-          <img src="images/screen-4.png" alt="Stats and Mileage">
-        </div>
-        <div class="icon">
-          <img src="images/bars-icon.png" alt="Bars Icon">
-        </div>
-        <h3>Stats &#43; Mileage</h3>
-        <p>Tracks your trips across all apps.</p>
       </div>
     </div>
   </body>
