Revised HTML div class and CSS column ruleset.

--- a/css-four-column-layout/index.html
+++ b/css-four-column-layout/index.html
@@ -10,11 +10,11 @@
   </head>
   <body>
     <div class="container">
-      <div class="row-">
+      <div class="row">
         <h2>How It Works</h2>
       </div>
       <div class="row">
-        <div class="col-1-4">
+        <div class="col-1-4 col-margin">
           <div class="image">
             <img src="images/screen-1.png" alt="App Switching">
           </div>
@@ -24,7 +24,7 @@
           <h3>App Switching</h3>
           <p>Toggles all your apps on and off.</p>
         </div>
-        <div class="col-1-4">
+        <div class="col-1-4 col-margin">
           <div class="image">
             <img src="images/screen-2.png" alt="Trip Filtering">
           </div>
@@ -34,7 +34,7 @@
           <h3>Trip Filtering</h3>
           <p>Evaluates your trip requests.</p>
         </div>
-        <div class="col-1-4">
+        <div class="col-1-4 col-margin">
           <div class="image">
             <img src="images/screen-3.png" alt="Service Filters">
           </div>
@@ -44,7 +44,7 @@
           <h3>Service Filters</h3>
           <p>Accepts only your ideal trips.</p>
         </div>
-        <div class="col-1-4">
+        <div class="col-1-4 col-margin">
           <div class="image">
             <img src="images/screen-4.png" alt="Stats and Mileage">
           </div>
