--- a/css-ecommerce-page/index.html
+++ b/css-ecommerce-page/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ecommerce Challenge</title>
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+  <title>Ecommerce Challenge</title>
 </head>
 <body>
   <header>
@@ -20,29 +21,39 @@
     <div class="container">
       <div class="row">
         <div class="col-1-5">
-          <img src="#" alt="#">
-          <p>Free People <span class="size">Size 6</span></p>
-          <p>$35 <del class="strike">$126 retail</del></p>
+          <div class="row image-wrapper">
+            <img src="images/dress1.jpeg" alt="Free People">
+          </div>
+          <p><strong>Free People</strong> <span>Size 6</span></p>
+          <p><strong class="price">$35</strong> <del>$126 retail</del></p>
         </div>
         <div class="col-1-5">
-          <img src="#" alt="#">
-          <p>Yves Saint Laurent <span class="size">One-Size</span></p>
-          <p>$200 <del class="strike">$1600 retail</del></p>
+          <div class="row image-wrapper">
+            <img src="images/ysl-bag.jpeg" alt="Yves Saint Laurent">
+          </div>
+          <p><strong>Yves Saint Laurent</strong> <span>One-Size</span></p>
+          <p><strong class="price">$200</strong> <del>$1600 retail</del></p>
         </div>
         <div class="col-1-5">
-          <img src="#" alt="#">
-          <p>Tiffany <span class="size">One-Size</span></p>
-          <p>$476 <del class="strike">$2000 retail</del></p>
+          <div class="row image-wrapper">
+            <img src="images/key.jpeg" alt="Tiffany">
+          </div>
+          <p><strong>Tiffany</strong> <span>One-Size</span></p>
+          <p><strong class="price">$476</strong> <del>$2000 retail</del></p>
         </div>
         <div class="col-1-5">
-          <img src="#" alt="#">
-          <p>Louis Vuitton <span class="size">One-Size</span></p>
-          <p>$95 <del class="strike">$1200 retail</del></p>
+          <div class="row image-wrapper">
+            <img src="images/lv-bag.jpg" alt="Louis Vuitton">
+          </div>
+          <p><strong>Louis Vuitton</strong> <span>One-Size</span></p>
+          <p><strong class="price">$95</strong> <del>$1200 retail</del></p>
         </div>
         <div class="col-1-5">
-          <img src="#" alt="#">
-          <p>Reformation <span class="size">Size 4</span></p>
-          <p>$20 <del class="strike">$108 retail</del></p>
+          <div class="row image-wrapper">
+            <img src="images/dress2.jpeg" alt="Reformation">
+          </div>
+          <p><strong>Reformation</strong> <span>Size 4</span></p>
+          <p><strong class="price">$20</strong> <del>$108 retail</del></p>
         </div>
       </div>
     </div>
