--- a/css-ecommerce-page/index.html
+++ b/css-ecommerce-page/index.html
@@ -20,36 +20,36 @@
   <section>
     <div class="container">
       <div class="row">
-        <div class="col-1-5">
-          <div class="row image-wrapper">
+        <div class="col-1-5 col-space">
+          <div class="row">
             <img src="images/dress1.jpeg" alt="Free People">
           </div>
           <p><strong>Free People</strong> <span>Size 6</span></p>
           <p><strong class="price">$35</strong> <del>$126 retail</del></p>
         </div>
-        <div class="col-1-5">
-          <div class="row image-wrapper">
+        <div class="col-1-5 col-space">
+          <div class="row">
             <img src="images/ysl-bag.jpeg" alt="Yves Saint Laurent">
           </div>
           <p><strong>Yves Saint Laurent</strong> <span>One-Size</span></p>
           <p><strong class="price">$200</strong> <del>$1600 retail</del></p>
         </div>
-        <div class="col-1-5">
-          <div class="row image-wrapper">
+        <div class="col-1-5 col-space">
+          <div class="row">
             <img src="images/key.jpeg" alt="Tiffany">
           </div>
           <p><strong>Tiffany</strong> <span>One-Size</span></p>
           <p><strong class="price">$476</strong> <del>$2000 retail</del></p>
         </div>
-        <div class="col-1-5">
-          <div class="row image-wrapper">
+        <div class="col-1-5 col-space">
+          <div class="row">
             <img src="images/lv-bag.jpg" alt="Louis Vuitton">
           </div>
-          <p><strong>Louis Vuitton</strong> <span>One-Size</span></p>
+          <p><strong>Louis Vuiton</strong> <span>One-Size</span></p>
           <p><strong class="price">$95</strong> <del>$1200 retail</del></p>
         </div>
-        <div class="col-1-5">
-          <div class="row image-wrapper">
+        <div class="col-1-5 col-space">
+          <div class="row">
             <img src="images/dress2.jpeg" alt="Reformation">
           </div>
           <p><strong>Reformation</strong> <span>Size 4</span></p>
