--- a/javascript-modal/index.html
+++ b/javascript-modal/index.html
@@ -7,15 +7,12 @@
   </head>
   <body>
     <button class="open-modal-btn">Open Modal</button>
-    <div class="modal-container">
-      <div class="row">
-        <div class="col-full">
-          <div class="modal">
-            <h2>Would you like to take a survey?</h2>
-            <button class="no-btn">NO</button>
-          </div>
-        </div>
+    <div class="modal-container-off">
+      <div class="modal">
+        <h2>Would you like to take a survey?</h2>
+        <button class="no-btn">NO</button>
       </div>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
