Completed javascript-typing-tutor exercise.

--- a/javascript-typing-tutor/index.html
+++ b/javascript-typing-tutor/index.html
@@ -14,44 +14,13 @@
   <div class="container">
     <div class="row">
       <div class="col-full">
-        <h1 class="phrase">
-          <span class="current-char">g</span>
-          <span>r</span>
-          <span>u</span>
-          <span>m</span>
-          <span>p</span>
-          <span>y</span>
-          <span> </span>
-          <span>w</span>
-          <span>i</span>
-          <span>z</span>
-          <span>a</span>
-          <span>r</span>
-          <span>d</span>
-          <span>s</span>
-          <span> </span>
-          <span>m</span>
-          <span>a</span>
-          <span>k</span>
-          <span>e</span>
-          <span> </span>
-          <span>t</span>
-          <span>o</span>
-          <span>x</span>
-          <span>i</span>
-          <span>c</span>
-          <span> </span>
-          <span>b</span>
-          <span>r</span>
-          <span>e</span>
-          <span>w</span>
-        </h1>
+        <h1 class="phrase-container"></h1>
       </div>
     </div>
   </div>
   <div class="modal-off">
-    <div class="modal">
-      <h2></h2>
+    <div class="prompt">
+      <h2 class="accuracy"></h2>
       <h3>Would you like to play again?</h3>
       <button class="reset">Yes</button>
     </div>
