Added timer logic to update image every 3 seconds.

--- a/javascript-carousel/index.html
+++ b/javascript-carousel/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="row">
         <div class="column-full">
-          <h1>Pokemon Carousel</h1>
+          <h1>JavaScript Carousel</h1>
         </div>
       </div>
     </div>
@@ -24,7 +24,7 @@
       <div class="row">
         <div class="column-full">
           <div class="carousel">
-            <img src="images/001.png" alt="Bulbasaur">
+            <img class="carousel-image" src="images/001.png" alt="Bulbasaur">
           </div>
         </div>
       </div>
