Added progress dots that step with image every 3 seconds.

--- a/javascript-carousel/index.html
+++ b/javascript-carousel/index.html
@@ -24,7 +24,22 @@
       <div class="row">
         <div class="column-full">
           <div class="carousel">
-            <img class="carousel-image" src="images/001.png" alt="Bulbasaur">
+            <div class="row">
+              <div class="column-full">
+                <img class="hero-image" src="images/001.png" alt="Bulbasaur">
+              </div>
+            </div>
+            <div class="row">
+              <div class="column-full">
+                <div class="progress-dots">
+                  <span class="fas fa-circle"></span>
+                  <span class="far fa-circle"></span>
+                  <span class="far fa-circle"></span>
+                  <span class="far fa-circle"></span>
+                  <span class="far fa-circle"></span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
