--- a/javascript-carousel/index.html
+++ b/javascript-carousel/index.html
@@ -22,21 +22,31 @@
   <section>
     <div class="container">
       <div class="row">
-        <div class="column-full">
+        <div class="column-100">
           <div class="carousel">
             <div class="row">
-              <div class="column-full">
+              <div class="column-10">
+                <div class="chevrons">
+                  <span class="fas fa-chevron-left"></span>
+                </div>
+              </div>
+              <div class="column-80">
                 <img class="hero-image" src="images/001.png" alt="Bulbasaur">
+              </div>
+              <div class="column-10">
+                <div class="chevrons">
+                  <span class="fas fa-chevron-right"></span>
+                </div>
               </div>
             </div>
             <div class="row">
-              <div class="column-full">
+              <div class="column-100">
                 <div class="progress-dots">
-                  <span class="fas fa-circle"></span>
-                  <span class="far fa-circle"></span>
-                  <span class="far fa-circle"></span>
-                  <span class="far fa-circle"></span>
-                  <span class="far fa-circle"></span>
+                  <span class="dot fas fa-circle"></span>
+                  <span class="dot far fa-circle"></span>
+                  <span class="dot far fa-circle"></span>
+                  <span class="dot far fa-circle"></span>
+                  <span class="dot far fa-circle"></span>
                 </div>
               </div>
             </div>
