Saving progress for updating image via clicking a progress dot.

--- a/javascript-carousel/index.html
+++ b/javascript-carousel/index.html
@@ -42,11 +42,11 @@
             <div class="row">
               <div class="column-100">
                 <div class="progress-dots">
-                  <span class="dot fas fa-circle"></span>
-                  <span class="dot far fa-circle"></span>
-                  <span class="dot far fa-circle"></span>
-                  <span class="dot far fa-circle"></span>
-                  <span class="dot far fa-circle"></span>
+                  <span class="dot fas fa-circle" data-dot-id="0"></span>
+                  <span class="dot far fa-circle" data-dot-id="1"></span>
+                  <span class="dot far fa-circle" data-dot-id="2"></span>
+                  <span class="dot far fa-circle" data-dot-id="3"></span>
+                  <span class="dot far fa-circle" data-dot-id="4"></span>
                 </div>
               </div>
             </div>
