--- a/javascript-carousel/index.html
+++ b/javascript-carousel/index.html
@@ -27,7 +27,7 @@
             <div class="row">
               <div class="column-10">
                 <div class="chevrons">
-                  <span class="fas fa-chevron-left"></span>
+                  <span class="chevron-left fas fa-chevron-left"></span>
                 </div>
               </div>
               <div class="column-80">
@@ -35,7 +35,7 @@
               </div>
               <div class="column-10">
                 <div class="chevrons">
-                  <span class="fas fa-chevron-right"></span>
+                  <span class="chevron-right fas fa-chevron-right"></span>
                 </div>
               </div>
             </div>
