Added progress dot render function and media queries.

--- a/javascript-carousel/index.html
+++ b/javascript-carousel/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="row">
         <div class="column-full">
-          <h1>JavaScript Carousel</h1>
+          <h1>Who's That Pokémon?</h1>
         </div>
       </div>
     </div>
@@ -41,13 +41,7 @@
             </div>
             <div class="row">
               <div class="column-100">
-                <div class="progress-dots">
-                  <span class="dot fas fa-circle" data-dot-id="0"></span>
-                  <span class="dot far fa-circle" data-dot-id="1"></span>
-                  <span class="dot far fa-circle" data-dot-id="2"></span>
-                  <span class="dot far fa-circle" data-dot-id="3"></span>
-                  <span class="dot far fa-circle" data-dot-id="4"></span>
-                </div>
+                <div class="progress-dots"></div>
               </div>
             </div>
           </div>
